src/test/ui/token/macro-incomplete-parse.stderr
error: macro expansion ignores token `,` and any following
  --> $DIR/macro-incomplete-parse.rs:17:9
   |
17 |         , //~ ERROR macro expansion ignores token `,`
   |         ^
   |
note: caused by the macro expansion here; the usage of `ignored_item!` is likely invalid in item context
  --> $DIR/macro-incomplete-parse.rs:31:1
   |
31 | ignored_item!();
   | ^^^^^^^^^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `,`
  --> $DIR/macro-incomplete-parse.rs:22:14
   |
22 |     () => ( 1,  //~ ERROR expected one of `.`, `;`, `?`, `}`, or an operator, found `,`
   |              ^ expected one of `.`, `;`, `?`, `}`, or an operator here
...
34 |     ignored_expr!();
   |     ---------------- in this macro invocation

error: macro expansion ignores token `,` and any following
  --> $DIR/macro-incomplete-parse.rs:28:14
   |
28 |     () => ( 1, 2 ) //~ ERROR macro expansion ignores token `,`
   |              ^
   |
note: caused by the macro expansion here; the usage of `ignored_pat!` is likely invalid in pattern context
  --> $DIR/macro-incomplete-parse.rs:36:9
   |
36 |         ignored_pat!() => (),
   |         ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

